[gd_scene load_steps=5 format=3 uid="uid://ht37v0usk801"]

[ext_resource type="Script" path="res://Scenes/level_bg.gd" id="1_qc5tp"]
[ext_resource type="Texture2D" uid="uid://u0qkamnlexd7" path="res://assets/backgrounds/jw.png" id="2_0mfas"]
[ext_resource type="Texture2D" uid="uid://b0a2wp7vfgypx" path="res://assets/backgrounds/spr_stars01.png" id="2_70dfy"]
[ext_resource type="Texture2D" uid="uid://co12m2t6dlfc2" path="res://assets/backgrounds/spr_stars03.png" id="4_40f5w"]

[node name="LevelBg" type="ParallaxBackground"]
script = ExtResource("1_qc5tp")

[node name="ParallaxLayerBg" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(2.08165e-12, 1920)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayerBg"]
position = Vector2(778, -8.14313e-13)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_0mfas")

[node name="ParallaxLayer1" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(2.08165e-12, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer1"]
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(661, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_70dfy")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(2.08165e-12, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer2"]
modulate = Color(1, 1, 1, 0.643137)
position = Vector2(684, 1152)
rotation = 1.5708
texture = ExtResource("4_40f5w")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
position = Vector2(0, 35)
motion_offset = Vector2(2.08165e-12, 600)
motion_mirroring = Vector2(2.08165e-12, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer3"]
position = Vector2(1034, 0)
rotation = 3.14159
texture = ExtResource("4_40f5w")
